--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "prisma:generate": "prisma generate --schema=./apps/backend/prisma/schema.prisma",
+    "prisma:push": "prisma db push --schema=./apps/backend/prisma/schema.prisma",
+    "prisma:studio": "prisma studio --schema=./apps/backend/prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
