--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
